:recycle: minor refactor