@@ -15,10 +15,11 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Logger;
+
+import static me.amuazm.discordFileManager.utils.Utils.splitIntoChunks;
 
 @Getter
 public class FileManager extends ListenerAdapter {
@@ -91,7 +92,6 @@ public class FileManager extends ListenerAdapter {
         }
 
         Message message = event.getMessage();
-        MessageChannel channel = event.getChannel();
 
         // Check if user is allowed to run this command
         if (!configManager.getAllowedUserIds().contains(event.getAuthor().getId())) {
@@ -139,9 +139,9 @@ public class FileManager extends ListenerAdapter {
             }
 
             File[] files = targetDir.listFiles();
+            String displayPath = relativePath.isEmpty() ? dirFromPluginFolder : dirFromPluginFolder + "/" + relativePath;
 
             if (files == null || files.length == 0) {
-                String displayPath = relativePath.isEmpty() ? dirFromPluginFolder : dirFromPluginFolder + "/" + relativePath;
                 channel.sendMessage("<@" + event.getAuthor().getId() + "> 📖 No files found inside `" + displayPath + "`").queue();
                 return;
             }
@@ -153,7 +153,6 @@ public class FileManager extends ListenerAdapter {
                 return f1.getName().toLowerCase().compareTo(f2.getName().toLowerCase());
             });
 
-            String displayPath = relativePath.isEmpty() ? dirFromPluginFolder : dirFromPluginFolder + "/" + relativePath;
             StringBuilder fileList = new StringBuilder("<@" + event.getAuthor().getId() + ">\n### 📖 " + itemCategory + " Files in `" + displayPath + "`:\n");
 
             // Add parent directory navigation if we're in a subdirectory
@@ -233,7 +232,7 @@ public class FileManager extends ListenerAdapter {
             return;
         }
 
-        Message.Attachment attachment = attachments.get(0);
+        Message.Attachment attachment = attachments.getFirst();
         String originalFilename = attachment.getFileName();
         String targetPath;
 
@@ -604,87 +603,5 @@ public class FileManager extends ListenerAdapter {
                 });
 
         logger.info("Uploaded file to discord: " + fileName);
-    }
-
-    private String[] splitIntoChunks(String text, int maxChunkSize) {
-        List<String> chunks = new ArrayList<>();
-        String[] lines = text.split("\n");
-
-        StringBuilder currentChunk = new StringBuilder();
-
-        for (String line : lines) {
-            // Check if adding this line would exceed the limit
-            // +1 for the newline character we'll add
-            if (currentChunk.length() + line.length() + 1 > maxChunkSize) {
-                // If current chunk has content, save it and start a new one
-                if (!currentChunk.isEmpty()) {
-                    chunks.add(currentChunk.toString());
-                    currentChunk = new StringBuilder();
-                }
-
-                // Handle case where a single line is longer than maxChunkSize
-                if (line.length() > maxChunkSize) {
-                    // Split the long line at word boundaries if possible
-                    chunks.addAll(splitLongLine(line, maxChunkSize));
-                } else {
-                    currentChunk.append(line);
-                }
-            } else {
-                // Add newline if this isn't the first line in the chunk
-                if (!currentChunk.isEmpty()) {
-                    currentChunk.append("\n");
-                }
-                currentChunk.append(line);
-            }
-        }
-
-        // Add the last chunk if it has content
-        if (!currentChunk.isEmpty()) {
-            chunks.add(currentChunk.toString());
-        }
-
-        return chunks.toArray(new String[0]);
-    }
-
-    private List<String> splitLongLine(String line, int maxChunkSize) {
-        List<String> chunks = new ArrayList<>();
-
-        // Try to split at word boundaries first
-        String[] words = line.split(" ");
-        StringBuilder currentChunk = new StringBuilder();
-
-        for (String word : words) {
-            // Check if adding this word would exceed the limit
-            // +1 for the space we'll add
-            if (currentChunk.length() + word.length() + 1 > maxChunkSize) {
-                // If current chunk has content, save it
-                if (!currentChunk.isEmpty()) {
-                    chunks.add(currentChunk.toString());
-                    currentChunk = new StringBuilder();
-                }
-
-                // If even a single word is too long, we have to split it
-                if (word.length() > maxChunkSize) {
-                    for (int i = 0; i < word.length(); i += maxChunkSize) {
-                        chunks.add(word.substring(i, Math.min(i + maxChunkSize, word.length())));
-                    }
-                } else {
-                    currentChunk.append(word);
-                }
-            } else {
-                // Add space if this isn't the first word in the chunk
-                if (!currentChunk.isEmpty()) {
-                    currentChunk.append(" ");
-                }
-                currentChunk.append(word);
-            }
-        }
-
-        // Add the last chunk if it has content
-        if (!currentChunk.isEmpty()) {
-            chunks.add(currentChunk.toString());
-        }
-
-        return chunks;
     }
 }
